--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
