--- a/personal-website/package.json
+++ b/personal-website/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.9",
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/engine": "^3.8.1",
